--- a/example/index.html
+++ b/example/index.html
@@ -7,10 +7,14 @@
   <title>React MindMap</title>
   <link rel="stylesheet" href="//f.alicdn.com/antd/3.4.0/antd.min.css">
   <link rel="stylesheet" href="./libs/kityminder.core.css">
+  <style>
+    #root {
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
-  <div id="minder-container"></div>
   <script src="//f.alicdn.com/react/16.5.0/react.production.min.js"></script>
   <script src="//f.alicdn.com/react-dom/16.5.0/react-dom.production.min.js"></script>
   <script src="//f.alicdn.com/react-router-dom/4.2.2/react-router-dom.min.js"></script>
