--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>React MindMap</title>
-  <link rel="stylesheet" href="//f.alicdn.com/antd/3.4.0/antd.min.css">
+  <link href="https://cdn.bootcss.com/antd/3.20.5/antd.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./libs/kityminder.core.css">
   <style>
     #root {
@@ -15,11 +15,11 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="//f.alicdn.com/react/16.5.0/react.production.min.js"></script>
-  <script src="//f.alicdn.com/react-dom/16.5.0/react-dom.production.min.js"></script>
+  <script src="https://cdn.bootcss.com/react/16.8.6/umd/react.production.min.js"></script>
+  <script src="https://cdn.bootcss.com/react-dom/16.8.6/umd/react-dom.production.min.js"></script>
   <script src="//f.alicdn.com/react-router-dom/4.2.2/react-router-dom.min.js"></script>
   <script src="//f.alicdn.com/moment/2.20.1/moment.min.js"></script>
-  <script src="//f.alicdn.com/antd/3.4.0/antd.min.js"></script>
+  <script src="https://cdn.bootcss.com/antd/3.20.5/antd.min.js"></script>
   <script src="./libs/kity.min.js"></script>
   <script src="./libs/kityminder.core.min.js"></script>
   <script src="./dist/bundle.js"></script>
